test/fail/array-concat.as
/* type error, operator not defined for operand types Nat[] and Nat[] */
let nats : Nat[] = [1] # [2];
